--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,5 +1,51 @@
 .container {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: var(--gray-900);
+
   h1 {
-    font-size: 50px;
+    color: var(--white);
+    font-size: 3rem;
+  }
+}
+
+.login {
+  margin-top: 2rem;
+  width: 600px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem 1.5rem;
+
+  form {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  form button {
+    height: 40px;
+    font-size: 1.2rem;
+  }
+}
+
+.text {
+  margin-top: 1rem;
+  color: var(--white);
+  cursor: pointer;
+}
+
+@media (max-width: 620px) {
+  .container {
+    h1 {
+      font-size: 2.5rem;
+    }
+  }
+  .login {
+    width: 90%;
   }
 }
